--- a/SmartCityBus/package.json
+++ b/SmartCityBus/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.69.5",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
