--- a/SmartCityBus/package.json
+++ b/SmartCityBus/package.json
@@ -16,9 +16,9 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
